src/main/istio/Gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: investing-stocks-portfolio-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: investing-stocks-portfolio-gateway
spec:
  hosts:
    - "*"
  gateways:
    - investing-stocks-portfolio-gateway
  http:
    - match:
        - uri:
            prefix: /investing-stocks-portfolio
      rewrite:
        uri: /
      route:
        - destination:
            host: investing-stocks-portfolio
            port:
              number: 8080
